support for cocoapods 1.0

--- a/Examples/Podfile
+++ b/Examples/Podfile
@@ -1,5 +1,11 @@
+
+target 'Examples' do
+
 use_frameworks!
-link_with 'Examples'
 
 pod 'Eureka'
 pod 'SwiftValidator'
+
+end
+
+project 'Examples.xcodeproj'
